# CapstoneHoney

./: .gitignore  README.md  TODOS.md  conftest.py  pyproject.toml
detect/: __init__.py
detect/dp_honey/: README.md  __init__.py  __main__.py  bigram.py  checksums.py  errors.py  formats.py  grammar.py  model_io.py  scanner.py
detect/dp_honey/webui/: __init__.py  __main__.py  app.py  service.py
detect/dp_honey/webui/static/: app.js  index.html  styles.css
docs/plans/: 2026-06-20-001-feat-dp-honey-generator-plan.md
docs/superpowers/plans/: 2026-06-20-dp-honey-fidelity-scanner.md  2026-06-20-dp-honey-webui.md
docs/superpowers/specs/: 2026-06-20-dp-honey-fidelity-scanner-design.md  2026-06-20-dp-honey-ui-design.md
tests/: test_dp_honey_bigram.py  test_dp_honey_checksums.py  test_dp_honey_cli.py  test_dp_honey_docs.py  test_dp_honey_formats.py  test_dp_honey_golden.py  test_dp_honey_grammar_checksum.py  test_dp_honey_model_io.py  test_dp_honey_scanner.py  test_dp_honey_webui.py  test_dp_honey_webui_http.py
tests/fixtures/dp_honey/: golden_model.json
